<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical"
    app:cardCornerRadius="6dp">

    <ImageView
        android:id="@+id/recipe_image_view"
        android:layout_width="match_parent"
        android:contentDescription="@string/recipe_image_content_description"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/recipe_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="28sp"
        tools:text="Nutella Pie" />


</android.support.v7.widget.CardView>