<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="com.example.ricardo.bakingapp.fragments.StepDetailFragment">


    <!-- Container to prevent the SimpleExoPlayerView expand in the entire screen -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/detail_exo_player"
            android:layout_width="match_parent"
            android:layout_height="220dp" />

        <ImageView
            android:id="@+id/thumbnail_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/step_thumbnail_content_description" />
    </FrameLayout>

    <TextView
        android:id="@+id/step_description_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:textColor="#000"
        android:textSize="20sp"
        tools:text="2. Whisk the graham cracker crumbs, 50 grams (1/4 cup) of sugar, and 1/2
        teaspoon of salt together in a medium bowl. Pour the melted butter and 1 teaspoon of vanilla
         into the dry ingredients and stir together until evenly mixed." />

</LinearLayout>